[b]Version 0.6.0rc3[/b] (not released yet):

(2008-02-17)
 * On startup smplayer will create a lock file (smplayer_init.lock in the
   config directory) which will be removed once smplayer has been initialized.
   If another instance finds that file it will wait until the file is deleted
   (or 10 seconds have passed). 
   The reason for this is to give the first instance some time to proper 
   initialize in case several instances were launched at the same time (Windows
   does it if you select to "Enqueue in smplayer" multiple files).

(2008-02-16)
 * New experimental code. New class "SMPlayer" which initializes the global
   objects and can parse the arguments. There's also a new main (main2.cpp).
   It's possible this could have broken something!


[b]Version 0.6.0rc2[/b]:

(2008-02-11)
 * Added gl:yuv=3 and gl2:yuv=3 to the list of video drivers.

(2008-02-09)
 * (Windows) Screensaver: set the timeout for lowpower, poweroff and 
   screensaver before playing, and restore on stop.
 
(2008-02-08)
 * (Windows) Bugfix: don't try to convert to 8.3 short names files that
   don't exist.
 
(2008-02-07)
 * The script create_deb should compile and create the package much faster.
 * Bugfix: if the mplayer binary configured in preferences is just "mplayer" 
   and there's a directory or file named mplayer in the smplayer working
   directory, smplayer would try to call that file. Now it won't call it
   if it's a regular file or directory, but WARNING if it's a binary it
   still will call it (this is because it tries to convert the path in an
   absolute path).
 * Some fixes so smplayer can work ok with a relative mplayer path.

(2008-02-06)
 * Now selection of chapters in mkv files should work properly again if
   using mplayer >= r25391.

(2008-02-05)
 * (Windows) Bugfix: the buttons to select the font color in 
   Preferences->Subtitles->SSA/ASS didn't show the color.
 * Removed Yurkovsky Andrey from the list of translators, as requested 
   by himself.

(2008-02-04)